--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ rvm:
   - 1.9.3
   - 2.2.6
   - 2.3.3
+  - 2.4.0
   - jruby-9.1.6.0
 env:
   matrix:
@@ -30,6 +31,10 @@ matrix:
   exclude:
     - rvm: 1.9.3
       env: RAILS=5.0.1
+    - rvm: 2.4.0
+      env: RAILS=3.2.22
+    - rvm: 2.4.0
+      env: RAILS=4.2.7.1
   allow_failures:
     - rvm: jruby-9.1.6.0
       env: RAILS=5.0.1
